2007-07-24  Jeffrey Stedfast  <fejj@novell.com>

	Part of the fix for bug #82114.

	* Project/Src/Parser/AST/AbstractNode.cs (AddChild): Set the
	Parent.

	* Project/Src/Parser/CSharp/cs.ATG: Same fixes as below... just in
	case we ever re-autogenerate Parser.cs

	* Project/Src/Parser/CSharp/Parser.cs: Store the location of
	VariableDeclarations and TypeReferences. Also make sure to set the
	TypeReference on each VariableDeclaration.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, NRefactory.mdp: Disabled building through makefile. Set
	  target runtime to 2.0.

2007-02-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, NRefactory.mdp: Added MD project and synchronized it
	  with the makefile.

2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/Src/Parser/CSharp/Parser.cs: Store the location of field
	  reference expressions.

2006-12-07 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	*  Project/NRefactory.csproj: Removed GlobalAssemblyInfo.cs
	since it is not used.

2006-07-03 Lluis Sanchez Gual  <lluis@novell.com> 

	* Project/Src/Parser/CSharp/Parser.cs: Store the location
	  of identifiers.

2006-05-22 Lluis Sanchez Gual  <lluis@novell.com> 

	* Makefile.am: Install the assembly in the right place.

2006-05-22 Lluis Sanchez Gual  <lluis@novell.com>

	Imported from SharpDevelop.